prefixed icons to prevent css bleeding

--- a/source/sass/font.scss
+++ b/source/sass/font.scss
@@ -1,45 +1,50 @@
 @font-face {
-    font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?4mgfyb');
-    src:    url('fonts/icomoon.eot?4mgfyb#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?4mgfyb') format('truetype'),
-        url('fonts/icomoon.woff?4mgfyb') format('woff'),
-        url('fonts/icomoon.svg?4mgfyb#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'kmd-datetimepicker';
+  src: url("fonts/kmd-datetimepicker.eot?4mgfyb");
+  src: url("fonts/kmd-datetimepicker.eot?4mgfyb#iefix") format("embedded-opentype"), 
+       url("fonts/kmd-datetimepicker.ttf?4mgfyb") format("truetype"), 
+       url("fonts/kmd-datetimepicker.woff?4mgfyb") format("woff"), 
+       url("fonts/kmd-datetimepicker.svg?4mgfyb#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+.kmd-datetimepicker {
+    [class^="icon-"], [class*=" icon-"] {
     /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
+    font-family: 'kmd-datetimepicker' !important;
     speak: none;
     font-style: normal;
     font-weight: normal;
     font-variant: normal;
     text-transform: none;
     line-height: 1;
-
     /* Better Font Rendering =========== */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
+    }
 
-.icon-clock-o:before {
+    .icon-clock-o:before {
     content: "\e900";
-}
-.icon-calendar-o:before {
-    content: "\e901";
-}
-.icon-chevron-right:before {
-    content: "\e902";
-}
-.icon-chevron-left:before {
-    content: "\e903";
-}
-.icon-chevron-down:before {
-    content: "\e904";
-}
-.icon-chevron-up:before {
-    content: "\e905";
-}
+    }
 
+    .icon-calendar-o:before {
+    content: "\e901";
+    }
+
+    .icon-chevron-right:before {
+    content: "\e902";
+    }
+
+    .icon-chevron-left:before {
+    content: "\e903";
+    }
+
+    .icon-chevron-down:before {
+    content: "\e904";
+    }
+
+    .icon-chevron-up:before {
+    content: "\e905";
+    }
+}
